src/styles/main.scss
$bgColor: hal(0, 0%, 99%);
$fgColor: hsl(0, 0%, 30%);
$brandColor1: #CD4437;
$brandColor2: #F9CF86;
$brandColor3: #f2f2f2;
$brandColor4: #495867;
$brandColor5: #e6e6e6;


@mixin mobileStyles {
    @media screen and (max-width: 736px) { @content; }
}

@mixin activeNav {
    background-color:rgba(0, 0, 0, 0.05);
    border-radius: 5px;
    color: $brandColor1;
}

:root {
    background-color: $bgColor;
    color: $fgColor;
    font-family: "Nunito Sans", sans-serif;
    font-size: 20px;
	font-weight: 300;
	line-height: 150%;
    margin: 0px;
}
body {
    margin: 0px;
}
a[href] {
    font-weight: bold;
    color: $brandColor1;
    text-decoration: none;

    &:hover, &:focus {
        color: lighten($brandColor1, 5%);
    }
}

h1, h2, h3, h4, h5, h6 {
    font-family: "Metropolis", sans-serif;
    line-height: 1.35;
}

code {
    display: inline-block;
    vertical-align: middle;
    color: $brandColor1;
    background-color: $brandColor3;
    font-size: 85%;
    line-height: 1.1em;
    padding: 0.1em;
    border-radius: 2px;
    border: 1px solid darken($brandColor3, 5%);
}

pre code {
    display: block;
    padding: 1em;
    line-height: 1.3;
}

@mixin contentWidth {
    width: 90vw;
    max-width: 57rem;
    margin-left: auto;
    margin-right: auto;
}
.contentWidth {
    @include contentWidth;
}
.textContentWidth {
    max-width: 35rem;
    width: 90vw;
    margin-left: auto;
    margin-right: auto;

    @include mobileStyles {
        a[href] {
            word-wrap: break-word;
        }
    }
}
.button {
    font-family: "Metropolis", sans-serif;
    font-weight: bold;
    font-size: 0.725rem;
    line-height: 1.25rem;
    display: inline-block;
    vertical-align: middle;
    background-color: $brandColor4;
    color: #FFF;
    text-transform: uppercase;
    text-decoration: none;
    cursor: pointer;
    padding: 0.35rem 1.5rem;
    border: none;
    border-radius: 0.25rem;
    transition: background-color 0.3s;

    &:hover {
        background-color: lighten($brandColor4, 5%);
    }
    &:active {
        background-color: darken($brandColor4, 5%);
    }
}
a.button[href] { color: #FFF; }

nav {
    font-family: Metropolis, sans-serif;
    font-size: 0.725rem;
    font-weight: bold;
    text-transform: uppercase;

    a[href] {
        color: inherit;
        text-decoration: none;
        display: inline-block;
        vertical-align: middle;
        margin-left: 1.5rem;

        &:first-child {
            margin-left: 0px;
        }

        &:hover {
            opacity: 0.9;
        }
    }
}
/* ... */

